# multi_agent_discovery_assessment

./: CLAUDE.md  EPCC_PLAN.md  README.md
client/: package-lock.json  package.json
client/__tests__/: AssessmentForm.test.tsx  CSPSelector.test.tsx  FileUpload.test.tsx  validation.test.ts
client/app/: layout.tsx  page.tsx
client/components/: AssessmentForm.tsx  CSPSelector.tsx  FileUpload.tsx  StatusBanner.tsx
client/lib/: types.ts  validation.ts
server/: .coverage  .env.example  pyproject.toml
server/app/: config.py  deps.py  main.py
server/app/agents/: __init__.py  architecture.py  base.py  discovery.py  estimation.py  org_policies.py
server/app/api/: errors.py  routes_assess.py  routes_health.py
server/app/ingestion/: parser.py
server/app/ingestion/extractors/: docx.py  pdf.py  xlsx_csv.py
server/app/llm/: base.py  factory.py
server/app/llm/providers/: anthropic_provider.py  openai_provider.py
server/app/mcp/: client.py  hooks.py
server/app/mcp/server/: repository.py  server.py
server/app/persistence/: policies_db.py
server/app/persistence/seed/: policies_seed.py
server/app/schemas/: api.py  architecture.py  discovery.py  enums.py  estimation.py  policies.py  report.py
server/tests/: conftest.py
server/tests/fixtures/: documents.py
server/tests/integration/: test_health.py
server/tests/unit/: test_agents.py  test_mcp_hooks.py  test_mcp_tools.py  test_parsers.py
